--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,21 @@ name = "bevy_fmod"
 description = "Idiomatic FMOD in Bevy"
 authors = ["Fabian 'Salzian' Fritzsche <bevy_fmod@salzian.dev>"]
 edition = "2021"
-repository = "https://github.com/salzian/bevy_fmod"
+repository = "https://github.com/ka-de/bevy_fmod"
 version = "0.4.0"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
-bevy = { version = "0.13", default-features = false, features = ["bevy_audio"] }
+bevy = { version = "0.13.2", default-features = false, features = [
+  "bevy_audio",
+] }
 bevy_mod_sysfail = "3.0"
 libfmod = "~2.206.2"
 
 [dev-dependencies]
 # The examples need the default features of bevy
-bevy = { version = "0.13", default-features = true }
+bevy = { version = "0.13.2", default-features = true }
 
 [features]
 default = []
